# lba2-dreamcast

./: .gitignore  CMakeLists.txt  CONTROLS-DC.md  DEVLOG-DC.md  README-DC.md  README.md  build-cdi.sh  build-dc.sh
LIB386/AIL/: CMakeLists.txt
LIB386/AIL/KOS/: CMakeLists.txt  SOUND_KOS_BACKEND.CPP  STREAM_KOS.CPP  VIDEO_AUDIO_KOS.CPP
LIB386/AIL/SDL/: stb_vorbis.h
LIB386/H/SYSTEM/: KEYBOARD_KEYS.H  LOADSAVE.H  LOGPRINT.H  dc_sdl_compat.h
LIB386/SVGA/: CMakeLists.txt  KOS.CPP
LIB386/SYSTEM/: CMakeLists.txt  FILES.CPP  KOS_BACKEND.CPP  LOADSAVE.CPP  LOGPRINT.CPP  N_MALLOC.CPP
LIB386/VIDEO_AUDIO_RESAMPLE/: VIDEO_AUDIO_RESAMPLE.CPP
LIB386/libsmacker/: smacker.c  smk_bitstream.c  smk_bitstream.h  smk_hufftree.c  smk_malloc.h
LIB386/pol_work/: POLY.CPP  POLYCLIP.CPP
SOURCES/: CMakeLists.txt  CREDITS.CPP  CREDITS.H  DIRECTORIES.CPP  GAMEMENU.CPP  INITADEL.C  INPUT.CPP  JOYSTICK_DC_STUB.CPP  LBA2.CFG  MUSIC.CPP  PERSO.CPP  PLAYACF.CPP  RES_DISCOVERY.CPP  SAVEGAME.CPP
SOURCES/CONSOLE/: CMakeLists.txt  CONSOLE.CPP  CONSOLE_CMD.CPP  CONSOLE_DC_STUB.CPP
cmake/: dreamcast-kos.cmake
tests/console/: test_console_commands.cpp
