cmake_minimum_required(VERSION 3.23)

project(LBA2)

# Option to enable x86 assembly (requires UASM). Default OFF since all ASM is ported to C++.
option(ENABLE_ASM "Enable x86 assembly (requires UASM assembler)" OFF)

if(ENABLE_ASM)
    # UASM assembly compiler setup (must happen before enable_language)
    set(CMAKE_ASM_MASM_COMPILER uasm)
    set(CMAKE_ASM_MASM_FLAGS_INIT "-D_WIN32 -Zm -c -Cx -Cp -W4 -nologo -Sg -Sa -Zd")
    if(WIN32)
        set(CMAKE_ASM_MASM_FLAGS_INIT ${CMAKE_ASM_MASM_FLAGS_INIT}" -coff")
    else()
        set(CMAKE_ASM_MASM_FLAGS_INIT ${CMAKE_ASM_MASM_FLAGS_INIT}" -elf -zcw")
    endif()
    enable_language(C CXX ASM_MASM)
else()
    enable_language(C CXX)
endif()

if(LBA2_TARGET_DREAMCAST)
    # KOS headers (kos/irq.h, dc/pvr.h) need C++11+ for alignas / enum class.
    # Codebase is written in C++98 style and is forward-compatible.
    set(CMAKE_CXX_STANDARD 14)
else()
    set(CMAKE_CXX_STANDARD 98)
endif()

# Compilation options
set(SOUND_BACKEND "sdl" CACHE STRING "Sound backend to be used")
set(MVIDEO_BACKEND "smacker" CACHE STRING "Motion Video backend to be used")
# Compilation options sanitization
## Sound backend
set(SOUND_BACKEND_OPTIONS null miles sdl kos)
set_property(CACHE SOUND_BACKEND PROPERTY STRINGS ${SOUND_BACKEND_OPTIONS})
if (NOT SOUND_BACKEND IN_LIST SOUND_BACKEND_OPTIONS)
    message(SEND_ERROR "SOUND_BACKEND set with invalid option '${SOUND_BACKEND}'. Valid options are: ${SOUND_BACKEND_OPTIONS}")
endif ()
## Motion Video backend
set(MVIDEO_BACKEND_OPTIONS null smacker)
set_property(CACHE MVIDEO_BACKEND PROPERTY STRINGS ${MVIDEO_BACKEND_OPTIONS})
if (NOT MVIDEO_BACKEND IN_LIST MVIDEO_BACKEND_OPTIONS)
    message(SEND_ERROR "MVIDEO_BACKEND set with invalid option '${MVIDEO_BACKEND}'. Valid options are: ${MVIDEO_BACKEND_OPTIONS}")
endif ()

# Testing options
option(LBA2_BUILD_TESTS "Build test suites" OFF)
option(LBA2_BUILD_ASM_EQUIV_TESTS "Build ASM↔CPP equivalence tests (requires objcopy; use OFF for host-only discovery tests)" ON)
option(ENABLE_POLY_RECORDING "Enable polygon call recording for ASM-vs-CPP testing" OFF)

# Debug tools (original Adeline developer debug features)
option(DEBUG_TOOLS "Enable developer debug tools (collision viz, benchmarks, bug saves)" OFF)
if(DEBUG_TOOLS)
    add_compile_definitions(DEBUG_TOOLS=1)
endif()

# Performance options
option(LBA2_NATIVE_ARCH "Use -march=native for host-optimized build (not portable)" OFF)

if(CMAKE_BUILD_TYPE STREQUAL "Release" AND NOT LBA2_TARGET_DREAMCAST)
    include(CheckIPOSupported)
    check_ipo_supported(RESULT ipo_supported OUTPUT ipo_error)
    if(ipo_supported)
        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
    else()
        message(STATUS "LTO not supported: ${ipo_error}")
    endif()
endif()

if(LBA2_NATIVE_ARCH)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64|amd64|AMD64|i[3-6]86")
        add_compile_options(-march=native)
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "aarch64|arm64|ARM64")
        add_compile_options(-mcpu=native)
    endif()
endif()

# Dependencies
if(NOT LBA2_TARGET_DREAMCAST)
    find_package(SDL3 REQUIRED CONFIG REQUIRED COMPONENTS SDL3-shared)
else()
    # On Dreamcast there is no SDL3. Provide an empty INTERFACE target so the
    # existing `target_link_libraries(... SDL3::SDL3)` calls in SVGA/SOURCES/CONSOLE
    # remain syntactically valid; the actual SDL-using .CPP files are excluded
    # from the build via per-CMakeLists guards instead.
    if(NOT TARGET SDL3::SDL3)
        add_library(SDL3::SDL3 INTERFACE IMPORTED)
    endif()
endif()

# Engine version string. Reads the canonical value from the VERSION file
# at the repo root and (optionally) appends -dirty when the working tree
# has uncommitted changes. Produces both ${CMAKE_BINARY_DIR}/VERSION.txt
# (plain text, for release pipelines) and ${CMAKE_BINARY_DIR}/VERSION_GENERATED.h
# (defines LBA2_VERSION_STRING for the binary).
include(${CMAKE_SOURCE_DIR}/cmake/git_version.cmake)

# Build info header (timestamp from compile, flags from configure,
# version macro from the include of VERSION_GENERATED.h inside BUILD_INFO.h.in).
set(BUILD_FLAGS_STR "SOUND_BACKEND=${SOUND_BACKEND} MVIDEO_BACKEND=${MVIDEO_BACKEND} ENABLE_ASM=${ENABLE_ASM}")
configure_file(${CMAKE_SOURCE_DIR}/SOURCES/BUILD_INFO.h.in ${CMAKE_BINARY_DIR}/BUILD_INFO.h)

# Process the targets
add_subdirectory(LIB386)
add_subdirectory(SOURCES)

if(LBA2_BUILD_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()
